<resources>
    <string name="app_name">Attendance Okay</string>
    <string name="btn_mark_attendance">Login to ESS Portal</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="input_user_details_title">Save/Update User Details</string>
    <string name="edit_text_id_hint">Enter Employee ID</string>
    <string name="edit_text_pwd_hint">Password</string>
    <string name="button_set_time">save</string>
    <string name="web_activity_label">ESS Portal</string>
    <string name="settings_activity_label">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="privacy_activity_label">Privacy Policy</string>
    <string name="action_settings">Settings</string>
    <string name="action_privacy">Privacy Policy</string>
    <string name="action_share">Share app</string>
    <string name="key_username">USERNAME</string>
    <string name="key_password">PASSWORD</string>
    <string name="key_schedule_time">SCHEDULE_TIME</string>
    <string name="CHANNEL_ID">MARK_ATTENDANCE</string>
    <string name="EXTRA_TIME_KEY">TIME_LONG</string>
    <string name="key_timer_first_timer">TIMER_FIRST_TIME</string>
    <string name="tv_made_in_india">Developed in India with love</string>
    <string name="key_login_attempt">LOGIN_ATTEMPT</string>
    <string name="sure">Sure</string>
    <string name="okay">Okay</string>
    <string name="save">Save</string>
    <string name="privacy_policy_text">
        <![CDATA[
            <p>\"Attendance Okay\" (hereinafter referred as \"app\") is an effort to ease out the process
            of marking daily attendance on the portal.</p>
            <p>The app <b>does not</b> collect any personal information or data. It saves your login credentials
            for the \'employee self service portal\' on your device only. If the data from the app is cleared or
            the app is uninstalled, the data gets cleared in the process.</p>
            <p>Other than your correct login credentials which are required for logon to the ess portal,
            the app does not require any special permission from you to work.</p>
            <p>This app is not linked with troubleshooting your issues related to ESS portal as such and
            you are required to use already established channels to address so.</p>
            <p><i>Contact for any query at:</i><\br>
            amarpreet.rites@gmail.com
            </p>
        ]]>
    </string>
    <string name="welcome_message">Simplify your Attendance Marking experience</string>
    <string name="username_pwd_set_toast_alert_first_time">Login details saved. To change/update go to app settings</string>
    <string name="username_pwd_set_toast_alert">Login details updated</string>
    <string name="login_details_incomplete_toast_alert">Login details are incomplete, kindly login manually.</string>
    <string name="input_user_details_alert">Kindly input correct details</string>
    <string name="ads_banner_main_id">ca-app-pub-8094821066311048/6825826947</string>
    <string name="ads_banner_privacy_id">ca-app-pub-8094821066311048/5269862802</string>
    <string name="ads_banner_web_id">ca-app-pub-8094821066311048/5449058298</string>
    <string name="pref_notify_mark_attendance">Notify to mark attendance</string>
    <string name="pref_key_login">pref_key_login_details</string>
    <string name="pref_key_notify">pref_key_notification</string>
    <string name="pref_key_notif_time">pref_key_notif_time</string>
    <string name="pref_set_notif_time">Set Notification Time</string>
    <string name="pref_login_details">Save / Update Login Details</string>
    <string name="pref_category_notification">Notification</string>
    <string name="pref_category_user_details">Login Details</string>
    <string name="pref_time_summary">09:00 am (default)</string>
    <string name="share_text">Simplify your attendance marking experience on the ESS portal!\n\nDownload <b>*Attendance Okay*</b> - https://bit.ly/attendance-okay</string>
    <string name="share_chooser_title">Share app using …</string>
  <string name="pref_category_updates">IPL Mania</string>
  <string name="pref_key_ipl_updates">key_show_updates</string>
  <string name="pref_show_ipl_updates">Show IPL updates</string>
</resources>